# LRT_terrain_model

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/terrain_model/: TerrainModel.h
include/terrain_model/core/: ConvexTerrain.h  ConvexTerrain.hpp  SignedDistanceField.h  SignedDistanceField.hpp  TerrainModel.hpp  TerrainPlane.h  TerrainPlane.hpp  Types.hpp
include/terrain_model/path_management/: package_path.h.in
include/terrain_model/planar_model/: PlanarFactoryFunctions.hpp  PlanarSignedDistanceField.hpp  PlanarTerrainModel.hpp
src/: TerrainModel.cpp
src/core/: ConvexTerrain.cpp  TerrainModel.cpp  TerrainPlane.cpp
src/planar_model/: PlanarFactoryFunctions.cpp  PlanarSignedDistanceField.cpp  PlanarTerrainModel.cpp
test/: Rotations.hpp  testConvexTerrain.cpp  testPlanarFactoryFunctions.cpp  testTerrainPlane.cpp
